venue-web/templates/deployment_bx.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: django-service
  labels:
    deployment: django-service
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: django-service
  template:
    metadata:
      labels:
        pod: django-service
    spec:
      containers:
      - args:
        - supervisord
        - -c
        - ./supervisord.conf
        - --nodaemon
        command:
        - /entrypoint.sh
        name: django-service
        image: volentixlabs/venueserver:v0.0.16-beta
        ports:
          - containerPort: 8000
          - containerPort: 9000
          - containerPort: 5555
