venue-web/templates/service_bx.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  labels:
    application: django-service
spec:
  selector:
    pod: django
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    name: django-port
  type: ClusterIP
